# SimpInkScr

./: .gitignore  README.md  setup.cfg  simple-py-api.inx  simple-py-api.py  simple_inkscape_scripting.inx  simple_inkscape_scripting.py  simple_py_api.inx  simple_py_api.py  svg_to_simp_ink_script.inx  svg_to_simp_ink_script.py
.github/workflows/: inkscape-extension.yml
examples/: README.md  animation.py  binary_tree.py  boolean_ops.py  brick_pyramid.py  chalkboard.py  clipping_path.py  clone_wave.py  drop_shadow.py  ellipses.py  formula.py  gradient_template.py  guides.py  holes.py  html.py  hyperlinks.py  image_spiral.py  inkex_paths.py  linear_gradient.py  markers.py  mask.py  metadata.py  move_rectangles.py  new_layer.py  overlapping_circles.py  path_effects.py  pixels_to_rectangles.py  poly_by_angle.py  screen_vs_print.py  sierpinski_triangle.py  speedometer.py  star-groups.py  star_groups.py  stroke_to_path.py  text_flow.py  text_path.py  turtle_spiral.py  units.py
simpinkscr/: __init__.py  simple_inkscape_scripting.py  svg_to_simp_ink_script.py
tests/: test_simple_inkscape_scripting.py  test_svg_to_simp_ink_script.py
tests/data/refs/: simpinkscr.simple_inkscape_scripting__--program____for__obj__in__all_shapes________________obj__rotate__15______center______first__True____.out  simpinkscr.simple_inkscape_scripting__--program__arc____width__2____height__2______100______pi__5____9__pi__5________slice______fill____yellow______stroke_width__2__.out  simpinkscr.simple_inkscape_scripting__--program__ellipse____width__2____height__2________75____50____.out  simpinkscr.simple_inkscape_scripting__--program__image____https______media__inkscape__org__static__images__inkscape-logo__png________0____0______embed__False__.out  simpinkscr.simple_inkscape_scripting__--program__polygon______0____300________150____0________300____300________150____200______.out  simpinkscr.simple_inkscape_scripting__--program__regular_polygon__5______100____100______80__.out  simpinkscr.simple_inkscape_scripting__--program__star__5______100____100________80____30____.out  (+112 more)
