[metadata]
name = simpinkscr
url = https://github.com/spakin/SimpInkScr
author = Scott Pakin
author_email = pakin@lanl.gov
description = Simple Inkscape Scripting.
version = 3.1.1
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0 license
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Source Code =https://github.com/spakin/SimpInkScr

[options]
zip_safe = False
packages = simpinkscr
python_requires = >=3.7
install_requires =
    inkex

[options.entry_points]
console_scripts =
    simple_inkscape_scripting = simpinkscr.simple_inkscape_scripting:main
    svg_to_simp_ink_script = simpinkscr.svg_to_simp_ink_script:main

[bdist_wheel]
universal = 1

